--- a/public_html/index.html
+++ b/public_html/index.html
@@ -57,8 +57,8 @@
         <div class='box' ng-show="boxSearchCat">
             <form class="form-horizontal" style="padding-top:20px" role="form" ng-submit="searchCancel()">
                 <div class="form-group">
-                    <label class="col-md-2 control-label">Search By: </label>
-                    <div class="col-md-4">
+                    <label>Search By: </label>
+                    <div>
                             <select class="form-control" ng-model="queryBy">
                                 <option value="$">Any</option>
                                 <option value="id">Id</option>
@@ -69,8 +69,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                    <label class="col-md-2 control-label">Search: </label>
-                    <div class="col-md-4">
+                    <div>
+                     <label>Search: </label>
                      <div ng-switch="queryBy">
                           <input type="number" class="form-control" ng-switch-when="id" style="width:200px"
                                     ng-model="query[queryBy]"/>
@@ -82,8 +82,8 @@
                     </div>
                 </div>
                 <div class="form-group">
-                     <label class="col-md-2 control-label">Equality: </label>
-                        <div class="col-md-4">
+                        <div>
+                            <label>Equality: </label>
                             <input type="checkbox" ng-model="strict">
                         </div>
                 </div>
@@ -99,7 +99,7 @@
             <div class='box1'>
                 <div class='imgBox'>
                     <img ng-src="http://localhost:8080/rest/cat/files/{{cat.imgName}}" width="150" alt="Description" />
-                    <input ng-show="editingData[cat.id]" type="file" class="custom-file-input" file-model="imgCatUp">
+                    
                 </div>  
             </div>
             <div class='box1'>
@@ -131,6 +131,11 @@
                                 <div class="col-md-4">
                                         <input type="text" class="form-control" style="width:100px" name="breed"
                                                 ng-model="cat.breed" />
+                                </div>
+                        </div>
+                        <div class="form-group">
+                                <div class="col-md-4">
+                                        <input ng-show="editingData[cat.id]" type="file" class="custom-file-input" file-model="imgCatUp">
                                 </div>
                         </div>
                     </form>
